[package]
name = "dota_stats_steve"
version = "0.1.0"
authors = ["Mauricio Saez <saeztoro.mauricio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }